test_regress/t/t_cover_fsm_concat_unsup.out
%Warning-COVERIGN: t/t_cover_fsm_concat_unsup.v:12:22: Ignoring unsupported: FSM coverage on complex operation CONCAT
   12 |   assign c = ({a, b} == 8'h00);
      |                      ^~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
